--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "Filter for GA",
-	"version": "1.2",
+	"version": "1.3",
 	"description": "Расширение для фильтрации сообщений на форуме Глобальной Авантюры",
 	"options_ui": {
 		"page": "options.html",
@@ -18,7 +18,7 @@
 	"content_scripts": [
 		{
 			"run_at": "document_end",
-			"matches": ["*://glav.su/forum/*/*/*"],
+			"matches": ["*://glav.su/forum/*/*"],
 			"js": ["content.js"],
 			"css": ["content.css"]
 		}
